--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Love Running.Club for runners in Dublin, Ireland.Urban running, trail running, Dublin docklands and Phoenix Park.">
+    <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise">
     <title>Love Running</title>
     <!--Favicon-->
     <link
@@ -23,5 +25,12 @@
       href="assets/favicon/favicon-16x16.png"
     />
   </head>
-  <body></body>
+  <body>
+<!--Header-->
+    <header>Header</header>
+<!--Main Content-->
+    <body>Main Content</body>
+<!--Footer-->
+    <footer>Footer</footer>
+  </body>
 </html>
