--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <!--Footer-->
     <footer>
-      <ul>
+      <ul id="social-networks">
         <li>
           <a
             href="https://www.facebook.com/" target="_blank" rel="noopener" 
