formatted submit form for mobile

--- a/index.html
+++ b/index.html
@@ -76,14 +76,15 @@
                             you out of a running funk or low mood, and inspire you to try new events.</p>
                     </div>
                 </div>
-                  <div id="benefits-image">
+                <div id="benefits-image">
                     <div id="circle-cover-bg"></div>
-                  </div>
+                </div>
             </div>
         </section>
-         <!-- Meetup Times section -->
+
+        <!-- Meetup Times section -->
         <section id="meetups">
-            <h2 class="hidden-heading">Meet-up Times</h2>
+            <h2>Meet-up Times</h2>
             <div id="times">
                 <div>
                     <h3>Urban <i class="fa-solid fa-city"></i></h3>
